# krp-oracle_old

artifacts/: checksums.txt  checksums_intermediate.txt  mock_oracle.wasm  oracle_pyth.wasm
contracts/mock_oracle/: Cargo.toml  README.md
contracts/mock_oracle/examples/: schema.rs
contracts/mock_oracle/schema/: mock-oracle.json
contracts/mock_oracle/schema/raw/: execute.json  query.json  response_to_price_feed.json
contracts/mock_oracle/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/oracle_pyth/: .Cargo.toml.swp  Cargo.toml  README.md
contracts/oracle_pyth/examples/: schema.rs
contracts/oracle_pyth/schema/: change_owner_msg.json  config_response.json  execute_msg.json  instantiate_msg.json  price_response.json  pyth_feeder_config_response.json  query_msg.json  set_config_feed_valid_msg.json
contracts/oracle_pyth/src/: contract.rs  error.rs  handler.rs  lib.rs  msg.rs  querier.rs  state.rs
contracts/oracle_pyth/src/testing/: mock_fn.rs  mod.rs  tests.rs
