[package]
name = "oracle-pyth"
version = "0.1.1"
edition = "2021"
authors = ["simba.dto"]

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.11
"""

[dependencies]
cosmwasm-bignumber = { path = "../../packages/bignumber",  version = "3.0.0" }
cosmwasm-std = { version = "1.2.5" }
cosmwasm-storage = { version = "1.2.5" }
cw-storage-plus = "0.16.0"
schemars = "0.8.12"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
pyth-sdk-cw = { version = "1.0.0" }
bigint = "4.4.3"
thiserror = "1.0.37"

cosmwasm-schema = "1.1.10"
[dev-dependencies]

[profile.dev]
overflow-checks = true
